.json changes reversed

--- a/src/i18n/strings/cs.json
+++ b/src/i18n/strings/cs.json
@@ -736,7 +736,7 @@
     "Language and region": "Jazyk a region",
     "Theme": "Motiv vzhledu",
     "Account management": "Správa účtu",
-    "Deactivating your account is a permanent action —— be careful!": "Deaktivace účtu je nevratná - buďte opatrní!",
+    "Deactivating your account is a permanent action — be careful!": "Deaktivace účtu je nevratná - buďte opatrní!",
     "Phone numbers": "Telefonní čísla",
     "Phone Number": "Telefonní číslo",
     "Unable to verify phone number.": "Nepovedlo se ověřit telefonní číslo.",
