--- a/src/i18n/strings/el.json
+++ b/src/i18n/strings/el.json
@@ -1773,7 +1773,7 @@
     "For help with using %(brand)s, click <a>here</a>.": "Για βοήθεια σχετικά με τη χρήση του %(brand)s, κάντε κλικ <a>εδώ</a>.",
     "Olm version:": "Έκδοση Olm:",
     "Deactivate account": "Απενεργοποίηση λογαριασμού",
-    "Deactivating your account is a permanent action —— be careful!": "Η απενεργοποίηση του λογαριασμού σας είναι μια μόνιμη ενέργεια - να είστε προσεκτικοί!",
+    "Deactivating your account is a permanent action — be careful!": "Η απενεργοποίηση του λογαριασμού σας είναι μια μόνιμη ενέργεια - να είστε προσεκτικοί!",
     "Interactively verify by Emoji": "Επαλήθευση με Emoji",
     "Signature upload failed": "Αποτυχία μεταφόρτωσης υπογραφής",
     "Signature upload success": "Επιτυχία μεταφόρτωσης υπογραφής",
