--- a/src/i18n/strings/es.json
+++ b/src/i18n/strings/es.json
@@ -865,7 +865,7 @@
     "Room Addresses": "Direcciones de la sala",
     "Set a new account password...": "Cambia la contraseña de tu cuenta…",
     "Account management": "Gestión de la cuenta",
-    "Deactivating your account is a permanent action —— be careful!": "Desactivar tu cuenta es permanente. ¡Cuidado!",
+    "Deactivating your account is a permanent action — be careful!": "Desactivar tu cuenta es permanente. ¡Cuidado!",
     "Credits": "Créditos",
     "For help with using %(brand)s, click <a>here</a>.": "Si necesitas ayuda usando %(brand)s, haz clic <a>aquí</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "Si necesitas ayuda usando %(brand)s, haz clic <a>aquí</a> o abre un chat con nuestro bot usando el botón de abajo.",
