--- a/src/i18n/strings/eu.json
+++ b/src/i18n/strings/eu.json
@@ -885,7 +885,7 @@
     "Language and region": "Hizkuntza eta eskualdea",
     "Theme": "Azala",
     "Account management": "Kontuen kudeaketa",
-    "Deactivating your account is a permanent action —— be careful!": "Kontua desgaitzea behin betiko ekintza bat da, kontuz ibili!",
+    "Deactivating your account is a permanent action — be careful!": "Kontua desgaitzea behin betiko ekintza bat da, kontuz ibili!",
     "For help with using %(brand)s, click <a>here</a>.": "%(brand)s erabiltzeko laguntza behar baduzu, egin klik <a>hemen</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "%(brand)s erabiltzeko laguntza behar baduzu, egin klik <a>hemen</a> edo hasi txat bat gure botarekin beheko botoia sakatuz.",
     "Chat with %(brand)s Bot": "Txateatu %(brand)s botarekin",
