--- a/src/i18n/strings/fr.json
+++ b/src/i18n/strings/fr.json
@@ -837,7 +837,7 @@
     "Language and region": "Langue et région",
     "Theme": "Thème",
     "Account management": "Gestion du compte",
-    "Deactivating your account is a permanent action —— be careful!": "La désactivation du compte est une action définitive. Soyez prudents !",
+    "Deactivating your account is a permanent action — be careful!": "La désactivation du compte est une action définitive. Soyez prudents !",
     "For help with using %(brand)s, click <a>here</a>.": "Pour obtenir de l’aide sur l’utilisation de %(brand)s, cliquez <a>ici</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "Pour obtenir de l’aide sur l’utilisation de %(brand)s, cliquez <a>ici</a> ou commencez une discussion avec notre bot en utilisant le bouton ci-dessous.",
     "Help & About": "Aide et À propos",
