--- a/src/i18n/strings/hi.json
+++ b/src/i18n/strings/hi.json
@@ -436,7 +436,7 @@
     "Language and region": "भाषा और क्षेत्र",
     "Theme": "थीम",
     "Account management": "खाता प्रबंधन",
-    "Deactivating your account is a permanent action —— be careful!": "अपने खाते को निष्क्रिय करना एक स्थायी कार्रवाई है - सावधान रहें!",
+    "Deactivating your account is a permanent action — be careful!": "अपने खाते को निष्क्रिय करना एक स्थायी कार्रवाई है - सावधान रहें!",
     "Deactivate Account": "खाता निष्क्रिय करें",
     "Legal": "कानूनी",
     "Credits": "क्रेडिट",
