--- a/src/i18n/strings/hu.json
+++ b/src/i18n/strings/hu.json
@@ -837,7 +837,7 @@
     "Language and region": "Nyelv és régió",
     "Theme": "Téma",
     "Account management": "Fiók menedzsment",
-    "Deactivating your account is a permanent action —— be careful!": "A fiók felfüggesztése végleges - légy óvatos!",
+    "Deactivating your account is a permanent action — be careful!": "A fiók felfüggesztése végleges - légy óvatos!",
     "For help with using %(brand)s, click <a>here</a>.": "A %(brand)s használatában való segítséghez kattints <a>ide</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "A %(brand)s használatában való segítségér kattints <a>ide</a> vagy kezdj beszélgetni a botunkkal az alábbi gombra kattintva.",
     "Help & About": "Súgó és névjegy",
