--- a/src/i18n/strings/is.json
+++ b/src/i18n/strings/is.json
@@ -1920,7 +1920,7 @@
     "To view all keyboard shortcuts, <a>click here</a>.": "Til að sjá allar flýtileiðir á lyklaborði, skaltu <a>smella hér</a>.",
     "Show my Communities": "Birta samfélögin mín",
     "Communities have been archived to make way for Spaces but you can convert your communities into Spaces below. Converting will ensure your conversations get the latest features.": "Samfélög-flokkuninni hefur verið skipt út fyrir Svæði, en þú getur umbreytt samfélögunum þínum yfir í svæði hér fyrir neðan. Þessi umbreyting tryggir að samtölin þín fái nýjustu eiginleika.",
-    "Deactivating your account is a permanent action —— be careful!": "Að gera aðganginn þinn óvirkan er endanleg aðgerð - farðu varlega!",
+    "Deactivating your account is a permanent action — be careful!": "Að gera aðganginn þinn óvirkan er endanleg aðgerð - farðu varlega!",
     "Appearance Settings only affect this %(brand)s session.": "Stillingar útlits hafa einungis áhrif á þessa %(brand)s setu.",
     "Enable audible notifications for this session": "Virkja tilkynningar með hljóði fyrir þessa setu",
     "Enable desktop notifications for this session": "Virkja tilkynningar á skjáborði fyrir þessa setu",
