--- a/src/i18n/strings/it.json
+++ b/src/i18n/strings/it.json
@@ -919,7 +919,7 @@
     "Language and region": "Lingua e regione",
     "Theme": "Tema",
     "Account management": "Gestione account",
-    "Deactivating your account is a permanent action —— be careful!": "La disattivazione dell'account è permanente - attenzione!",
+    "Deactivating your account is a permanent action — be careful!": "La disattivazione dell'account è permanente - attenzione!",
     "General": "Generale",
     "Credits": "Crediti",
     "For help with using %(brand)s, click <a>here</a>.": "Per aiuto su come usare %(brand)s, clicca <a>qui</a>.",
