--- a/src/i18n/strings/sr.json
+++ b/src/i18n/strings/sr.json
@@ -1460,7 +1460,7 @@
     "End": "",
     "Credits": "Заслуге",
     "Legal": "Легално",
-    "Deactivating your account is a permanent action —— be careful!": "Драктивирање вашег налога је трајна акција - будите опрезни!",
+    "Deactivating your account is a permanent action — be careful!": "Драктивирање вашег налога је трајна акција - будите опрезни!",
     "Deactivate account": "Деактивирај налог",
     "Account management": "Управљање профилом",
     "Server name": "Име сервера",
