--- a/src/i18n/strings/et.json
+++ b/src/i18n/strings/et.json
@@ -1830,7 +1830,7 @@
     "Your password was successfully changed. You will not receive push notifications on other sessions until you log back in to them": "Sinu salasõna sai edukalt muudetud. Sa ei saa oma teistes sessioonides tõuketeateid seni, kuni sa pole neist välja ja tagasi loginud",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "Selleks, et sind võiks leida e-posti aadressi või telefoninumbri alusel, nõustu isikutuvastusserveri (%(serverName)s) kasutustingimustega.",
     "Account management": "Kontohaldus",
-    "Deactivating your account is a permanent action —— be careful!": "Kuna kasutajakonto dektiveerimist ei saa tagasi pöörata, siis palun ole ettevaatlik!",
+    "Deactivating your account is a permanent action — be careful!": "Kuna kasutajakonto dektiveerimist ei saa tagasi pöörata, siis palun ole ettevaatlik!",
     "Deactivate Account": "Deaktiveeri konto",
     "Discovery": "Leia kasutajaid",
     "Deactivate account": "Deaktiveeri kasutajakonto",
