--- a/src/i18n/strings/he.json
+++ b/src/i18n/strings/he.json
@@ -1829,7 +1829,7 @@
     "Discovery": "מציאה",
     "Deactivate account": "סגור חשבון",
     "Deactivate Account": "סגור חשבון",
-    "Deactivating your account is a permanent action —— be careful!": "סגירת החשבון הינה פעולה מוחלטת - היו זהירים!",
+    "Deactivating your account is a permanent action — be careful!": "סגירת החשבון הינה פעולה מוחלטת - היו זהירים!",
     "Account management": "ניהול חשבון",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "הסכים לתנאי השירות של שרת הזהות (%(serverName)s) כדי לאפשר לעצמך להיות גלוי על ידי כתובת דוא\"ל או מספר טלפון.",
     "Language and region": "שפה ואיזור",
