--- a/src/i18n/strings/nb_NO.json
+++ b/src/i18n/strings/nb_NO.json
@@ -522,7 +522,7 @@
     "Add theme": "Legg til tema",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "Godkjenn identitetstjenerens (%(serverName)s) brukervilkår, slik at du kan bli oppdaget ut i fra E-postadresse eller telefonnummer.",
     "Account management": "Kontobehandling",
-    "Deactivating your account is a permanent action —— be careful!": "Å deaktivere kontoen din er en permanent handling - vær forsiktig!",
+    "Deactivating your account is a permanent action — be careful!": "Å deaktivere kontoen din er en permanent handling - vær forsiktig!",
     "Deactivate Account": "Deaktiver kontoen",
     "Discovery": "Oppdagelse",
     "Deactivate account": "Deaktiver kontoen",
