--- a/src/i18n/strings/pt_BR.json
+++ b/src/i18n/strings/pt_BR.json
@@ -916,7 +916,7 @@
     "Language and region": "Idioma e região",
     "Theme": "Tema",
     "Account management": "Gerenciamento da Conta",
-    "Deactivating your account is a permanent action —— be careful!": "Desativar sua conta é uma ação permanente - tenha cuidado!",
+    "Deactivating your account is a permanent action — be careful!": "Desativar sua conta é uma ação permanente - tenha cuidado!",
     "General": "Geral",
     "Credits": "Licenças",
     "For help with using %(brand)s, click <a>here</a>.": "Para obter ajuda com o uso do %(brand)s, clique <a>aqui</a>.",
