--- a/src/i18n/strings/zh_Hant.json
+++ b/src/i18n/strings/zh_Hant.json
@@ -835,7 +835,7 @@
     "Language and region": "語言與區域",
     "Theme": "主題",
     "Account management": "帳號管理",
-    "Deactivating your account is a permanent action —— be careful!": "停用您的帳號是永久動作，請小心！",
+    "Deactivating your account is a permanent action — be careful!": "停用您的帳號是永久動作，請小心！",
     "For help with using %(brand)s, click <a>here</a>.": "對於使用 %(brand)s 的說明，點選<a>這裡</a>。",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "對於使用 %(brand)s 的說明，點選<a>這裡</a>或是使用下面的按鈕開始與我們的機器人聊天。",
     "Chat with %(brand)s Bot": "與 %(brand)s 機器人聊天",
