--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1784,6 +1784,13 @@
     "Show Widgets": "Show Widgets",
     "Search": "Search",
     "Invite": "Invite",
+    "Video room": "Video room",
+    "Public space": "Public space",
+    "Public room": "Public room",
+    "Private space": "Private space",
+    "Private room": "Private room",
+    "%(count)s members|other": "%(count)s members",
+    "%(count)s members|one": "%(count)s member",
     "Start new chat": "Start new chat",
     "Invite to space": "Invite to space",
     "You do not have permissions to invite people to this space": "You do not have permissions to invite people to this space",
@@ -2471,7 +2478,6 @@
     "Topic (optional)": "Topic (optional)",
     "Room visibility": "Room visibility",
     "Private room (invite only)": "Private room (invite only)",
-    "Public room": "Public room",
     "Visible to space members": "Visible to space members",
     "Block anyone not part of %(serverName)s from ever joining this room.": "Block anyone not part of %(serverName)s from ever joining this room.",
     "Create video room": "Create video room",
@@ -2482,7 +2488,6 @@
     "Add a space to a space you manage.": "Add a space to a space you manage.",
     "Space visibility": "Space visibility",
     "Private space (invite only)": "Private space (invite only)",
-    "Public space": "Public space",
     "Want to add an existing space instead?": "Want to add an existing space instead?",
     "Adding...": "Adding...",
     "Sign out": "Sign out",
@@ -2650,8 +2655,6 @@
     "Manually export keys": "Manually export keys",
     "You'll lose access to your encrypted messages": "You'll lose access to your encrypted messages",
     "Are you sure you want to sign out?": "Are you sure you want to sign out?",
-    "%(count)s members|other": "%(count)s members",
-    "%(count)s members|one": "%(count)s member",
     "%(count)s rooms|other": "%(count)s rooms",
     "%(count)s rooms|one": "%(count)s room",
     "You're removing all spaces. Access will default to invite only": "You're removing all spaces. Access will default to invite only",
@@ -2922,7 +2925,6 @@
     "Forget": "Forget",
     "Mentions only": "Mentions only",
     "See room timeline (devtools)": "See room timeline (devtools)",
-    "Video room": "Video room",
     "Space": "Space",
     "Space home": "Space home",
     "Manage & explore rooms": "Manage & explore rooms",
@@ -3113,7 +3115,6 @@
     "Results": "Results",
     "Rooms and spaces": "Rooms and spaces",
     "Search names and descriptions": "Search names and descriptions",
-    "Private space": "Private space",
     "<inviter/> invites you": "<inviter/> invites you",
     "To view %(spaceName)s, you need an invite": "To view %(spaceName)s, you need an invite",
     "Welcome to <name/>": "Welcome to <name/>",
