Adapt RoomPreviewCard for video rooms

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1875,6 +1875,9 @@
     "Leave": "Leave",
     "<inviter/> invites you": "<inviter/> invites you",
     "To view %(roomName)s, you need an invite": "To view %(roomName)s, you need an invite",
+    "To view, please enable video rooms in Labs first": "To view, please enable video rooms in Labs first",
+    "To join, please enable video rooms in Labs first": "To join, please enable video rooms in Labs first",
+    "Show Labs settings": "Show Labs settings",
     "Appearance": "Appearance",
     "Show rooms with unread messages first": "Show rooms with unread messages first",
     "Show previews of messages": "Show previews of messages",
