Add a reload warning

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -869,8 +869,10 @@
     "Experimental": "Experimental",
     "Developer": "Developer",
     "Video rooms": "Video rooms",
-    "A new way to chat over voice and video in Element.": "A new way to chat over voice and video in Element.",
-    "Video rooms are always-on VoIP channels embedded within a room in Element.": "Video rooms are always-on VoIP channels embedded within a room in Element.",
+    "A new way to chat over voice and video in %(brand)s.": "A new way to chat over voice and video in %(brand)s.",
+    "Video rooms are always-on VoIP channels embedded within a room in %(brand)s.": "Video rooms are always-on VoIP channels embedded within a room in %(brand)s.",
+    "Joining the beta will reload %(brand)s.": "Joining the beta will reload %(brand)s.",
+    "Leaving the beta will reload %(brand)s.": "Leaving the beta will reload %(brand)s.",
     "How can I create a video room?": "How can I create a video room?",
     "Use the “+” button in the room section of the left panel.": "Use the “+” button in the room section of the left panel.",
     "Can I use text chat alongside the video call?": "Can I use text chat alongside the video call?",
