More "setup"=>"set up"

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -806,7 +806,7 @@
     "Set up recovery for secure messaging": "Set up recovery for secure messaging",
     "Secure messaging upgrade available": "Secure messaging upgrade available",
     "Set up secure messaging on this device": "Set up secure messaging on this device",
-    "Setup": "Setup",
+    "Set up": "Set up",
     "Upgrade": "Upgrade",
     "Safeguard against losing access to encrypted messages & data": "Safeguard against losing access to encrypted messages & data",
     "You won't be able to receive secure messages nor access past secure messages until you complete setup.": "You won't be able to receive secure messages nor access past secure messages until you complete setup.",
@@ -950,7 +950,8 @@
     "Show previews/thumbnails for images": "Show previews/thumbnails for images",
     "Enable message search in encrypted rooms": "Enable message search in encrypted rooms",
     "How fast should messages be downloaded.": "How fast should messages be downloaded.",
-    "Manually verify all remote sessions": "Manually verify all remote sessions",
+    "Verify each individual device used by a user before sending secure messages to it, not trusting the recipient's cross-signing": "Verify each individual device used by a user before sending secure messages to it, not trusting the recipient's cross-signing",
+    "Don't send secure messages to devices that have not been verified by the recipient": "Don't send secure messages to devices that have not been verified by the recipient",
     "IRC display name width": "IRC display name width",
     "Show chat effects (animations when receiving e.g. confetti)": "Show chat effects (animations when receiving e.g. confetti)",
     "Show all rooms in Home": "Show all rooms in Home",
@@ -1244,13 +1245,20 @@
     "Rename": "Rename",
     "Display Name": "Display Name",
     "Individually verify each device used by a user to mark it as trusted, not trusting cross-signed devices.": "Individually verify each device used by a user to mark it as trusted, not trusting cross-signed devices.",
-    "These devices are set up for end-to-end encryption and are able to access your past secure messages. They will also show as trusted to others.": "These devices are set up for end-to-end encryption and are able to access your past secure messages. They will also show as trusted to others.",
-    "Not set up for secure messaging": "Not set up for secure messaging",
-    "These devices have not been set up for end-to-end encryption messages and will show as untrusted to others. You can set them up so that you": "These devices have not been set up for end-to-end encryption messages and will show as untrusted to others. You can set them up so that you",
-    "Devices without secure messaging support": "Devices without secure messaging support",
-    "These devices do not support secure messaging.": "These devices do not support secure messaging.",
     "Secure messaging is set up on this device.": "Secure messaging is set up on this device.",
-    "Secure messaging is not set up on this device.": "Secure messaging is not set up on this device.",
+    "Save recovery key": "Save recovery key",
+    "Delete recovery key from this device": "Delete recovery key from this device",
+    "Secure messaging is not set up on this device. Set up secure messaging to access past encrypted messages and allow others to trust it.": "Secure messaging is not set up on this device. Set up secure messaging to access past encrypted messages and allow others to trust it.",
+    "Set up now": "Set up now",
+    "Other devices": "Other devices",
+    "Lax": "Lax",
+    "Strict": "Strict",
+    "Paranoid": "Paranoid",
+    "Secure messages will be sent to all recipients and devices irrespective of whether they have verified them.": "Secure messages will be sent to all recipients and devices irrespective of whether they have verified them.",
+    "Secure messages will only be sent to devices of a recipient where the recipient has completed verification of that device.": "Secure messages will only be sent to devices of a recipient where the recipient has completed verification of that device.",
+    "Secure messages will only be sent to recipients whom you have completed verification with.": "Secure messages will only be sent to recipients whom you have completed verification with.",
+    "Secure messages will only be sent to recipient devices that you have verified yourself.": "Secure messages will only be sent to recipient devices that you have verified yourself.",
+    "Custom level, use the advanced controls below.": "Custom level, use the advanced controls below.",
     "Securely cache encrypted messages locally for them to appear in search results, using %(size)s to store messages from %(rooms)s rooms.|other": "Securely cache encrypted messages locally for them to appear in search results, using %(size)s to store messages from %(rooms)s rooms.",
     "Securely cache encrypted messages locally for them to appear in search results, using %(size)s to store messages from %(rooms)s rooms.|one": "Securely cache encrypted messages locally for them to appear in search results, using %(size)s to store messages from %(rooms)s room.",
     "Manage": "Manage",
@@ -1342,7 +1350,6 @@
     "Algorithm:": "Algorithm:",
     "Your keys are <b>not being backed up from this device</b>.": "Your keys are <b>not being backed up from this device</b>.",
     "Back up your keys before signing out to avoid losing them.": "Back up your keys before signing out to avoid losing them.",
-    "Set up": "Set up",
     "well formed": "well formed",
     "unexpected type": "unexpected type",
     "Back up your secure messaging keys with your account data in case you lose access to your devices. Your keys will be secured with a recovery key.": "Back up your secure messaging keys with your account data in case you lose access to your devices. Your keys will be secured with a recovery key.",
@@ -1502,11 +1509,11 @@
     "If this isn't what you want, please use a different tool to ignore users.": "If this isn't what you want, please use a different tool to ignore users.",
     "Room ID or address of ban list": "Room ID or address of ban list",
     "Subscribe": "Subscribe",
-    "Secure Backup": "Secure Backup",
+    "Message key backup": "Message key backup",
     "Cross-signing": "Cross-signing",
     "Your server admin has disabled secure messaging by default. You will need to enable it on individual rooms and Direct Messages where you want it.": "Your server admin has disabled secure messaging by default. You will need to enable it on individual rooms and Direct Messages where you want it.",
-    "Secure messages are protected using end-to-end encryption ": "Secure messages are protected using end-to-end encryption ",
-    "Manage your signed-in devices below. A device's name is visible to people you communicate with.": "Manage your signed-in devices below. A device's name is visible to people you communicate with.",
+    "Secure messages are protected using end-to-end encryption. This ensures that only you and your intended recipients can read them.": "Secure messages are protected using end-to-end encryption. This ensures that only you and your intended recipients can read them.",
+    "Your devices": "Your devices",
     "Search": "Search",
     "Sidebar": "Sidebar",
     "Spaces to show": "Spaces to show",
@@ -2612,7 +2619,8 @@
     "Leave all rooms": "Leave all rooms",
     "Leave some rooms": "Leave some rooms",
     "Leave space": "Leave space",
-    "Your recovery key is a safety net - you can use it to restore access to your encrypted messages if you forget you lose access to your devices.": "Your recovery key is a safety net - you can use it to restore access to your encrypted messages if you forget you lose access to your devices.",
+    "Your recovery key is a safety net - you can use it to restore access to your secure message messages if you forget you lose access to your devices.": "Your recovery key is a safety net - you can use it to restore access to your secure message messages if you forget you lose access to your devices.",
+    "Your recovery key is used to restore access to your secure messages. As you don't have any other devices, if you don't save the recovery key you will lose access to your secure messages by signing out. ": "Your recovery key is used to restore access to your secure messages. As you don't have any other devices, if you don't save the recovery key you will lose access to your secure messages by signing out. ",
     "Keep a copy of it somewhere secure, like a password manager or even a safe.": "Keep a copy of it somewhere secure, like a password manager or even a safe.",
     "Your recovery key": "Your recovery key",
     "Your recovery key has been <b>copied to your clipboard</b>, paste it to:": "Your recovery key has been <b>copied to your clipboard</b>, paste it to:",
@@ -2620,7 +2628,7 @@
     "<b>Print it</b> and store it somewhere safe": "<b>Print it</b> and store it somewhere safe",
     "<b>Save it</b> on a USB key or backup drive": "<b>Save it</b> on a USB key or backup drive",
     "<b>Copy it</b> to your personal cloud storage": "<b>Copy it</b> to your personal cloud storage",
-    "Without saving your secure messaging recovey key, you won't be able to restore your encrypted message history if you log out or use another session.": "Without saving your secure messaging recovey key, you won't be able to restore your encrypted message history if you log out or use another session.",
+    "Without saving your secure messaging recovey key, you won't be able to restore your encrypted message history if you log out or use another device.": "Without saving your secure messaging recovey key, you won't be able to restore your encrypted message history if you log out or use another device.",
     "Save your secure messaging recovery key": "Save your secure messaging recovery key",
     "Checking secure messaging backup state": "Checking secure messaging backup state",
     "Are you sure you want to sign out?": "Are you sure you want to sign out?",
@@ -2830,7 +2838,6 @@
     "<b>Warning</b>: You should only set up key backup from a trusted computer.": "<b>Warning</b>: You should only set up key backup from a trusted computer.",
     "Access your secure message history and set up secure messaging by entering your Security Key.": "Access your secure message history and set up secure messaging by entering your Security Key.",
     "If you've forgotten your Security Key you can <button>set up new recovery options</button>": "If you've forgotten your Security Key you can <button>set up new recovery options</button>",
-    "Verify this session": "Verify this session",
     "Send custom account data event": "Send custom account data event",
     "Send custom room account data event": "Send custom room account data event",
     "Event Type": "Event Type",
