--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2922,6 +2922,7 @@
     "Forget": "Forget",
     "Mentions only": "Mentions only",
     "See room timeline (devtools)": "See room timeline (devtools)",
+    "Video room": "Video room",
     "Space": "Space",
     "Space home": "Space home",
     "Manage & explore rooms": "Manage & explore rooms",
