Very simple widget integration of Element Call
This just embeds Element Call as a widget, leaving it to do signalling
in a different room, on (probably) a different homeserver.

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -884,6 +884,7 @@
     "Thank you for trying the beta, please go into as much detail as you can so we can improve it.": "Thank you for trying the beta, please go into as much detail as you can so we can improve it.",
     "Custom user status messages": "Custom user status messages",
     "Video rooms (under active development)": "Video rooms (under active development)",
+    "Element Call Integration (under active development)": "Element Call Integration (under active development)",
     "Render simple counters in room header": "Render simple counters in room header",
     "Multiple integration managers (requires manual setup)": "Multiple integration managers (requires manual setup)",
     "Try out new ways to ignore people (experimental)": "Try out new ways to ignore people (experimental)",
@@ -2928,6 +2929,8 @@
     "Source URL": "Source URL",
     "Collapse reply thread": "Collapse reply thread",
     "Report": "Report",
+    "Call with Jitsi": "Call with Jitsi",
+    "Call with Element call": "Call with Element call",
     "Forget": "Forget",
     "Mentions only": "Mentions only",
     "See room timeline (devtools)": "See room timeline (devtools)",
