[issue-11816] add support for im.vector.setting.override_colors
im.vector.setting.override_colors is a map of userId -> colorSpec

colorSpec is either a color index (5) or a hexadecimal color (#rrggbb)

If colorSpec is a color index then this index will be used instead of
the userId hash to calculate the color-class for the nick-name span.

If colorSpec is a hexadecimal color code, then the span color will be
specified with a style.color attribute.

Signed-off-by: Péter Radics <mitchnull@gmail.com>

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2008,6 +2008,7 @@
     "%(count)s sessions|one": "%(count)s session",
     "Hide sessions": "Hide sessions",
     "Message": "Message",
+    "Override display name colour": "Override display name colour",
     "Jump to read receipt": "Jump to read receipt",
     "Mention": "Mention",
     "Share Link to User": "Share Link to User",
