--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2980,7 +2980,7 @@
     "Unread email icon": "Unread email icon",
     "To create your account, open the link in the email we just sent to %(emailAddress)s.": "To create your account, open the link in the email we just sent to %(emailAddress)s.",
     "Did not receive it? <a>Resend it</a>": "Did not receive it? <a>Resend it</a>",
-    "Did not receive it? <a>Requested</a>": "Did not receive it? <a>Requested</a>",
+    "Resent!": "Resent!",
     "Token incorrect": "Token incorrect",
     "A text message has been sent to %(msisdn)s": "A text message has been sent to %(msisdn)s",
     "Please enter the code it contains:": "Please enter the code it contains:",
