--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1795,6 +1795,7 @@
     "Explore rooms": "Explore rooms",
     "New room": "New room",
     "You do not have permissions to create new rooms in this space": "You do not have permissions to create new rooms in this space",
+    "New video room": "New video room",
     "Add existing room": "Add existing room",
     "You do not have permissions to add rooms to this space": "You do not have permissions to add rooms to this space",
     "Explore public rooms": "Explore public rooms",
