"N people connected" → "N people joined"

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1021,8 +1021,8 @@
     "%(peerName)s held the call": "%(peerName)s held the call",
     "Connecting": "Connecting",
     "Dial": "Dial",
-    "%(count)s people connected|other": "%(count)s people connected",
-    "%(count)s people connected|one": "%(count)s person connected",
+    "%(count)s people joined|other": "%(count)s people joined",
+    "%(count)s people joined|one": "%(count)s person joined",
     "Audio devices": "Audio devices",
     "Mute microphone": "Mute microphone",
     "Unmute microphone": "Unmute microphone",
