--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1892,8 +1892,8 @@
     "Low Priority": "Low Priority",
     "Copy room link": "Copy room link",
     "Video": "Video",
-    "Connecting...": "Connecting...",
-    "Connected": "Connected",
+    "Joining…": "Joining…",
+    "Joined": "Joined",
     "%(count)s participants|other": "%(count)s participants",
     "%(count)s participants|one": "1 participant",
     "%(count)s unread messages including mentions.|other": "%(count)s unread messages including mentions.",
@@ -3097,7 +3097,6 @@
     "You have %(count)s unread notifications in a prior version of this room.|one": "You have %(count)s unread notification in a prior version of this room.",
     "Joining": "Joining",
     "You don't have permission": "You don't have permission",
-    "Joined": "Joined",
     "This room is suggested as a good one to join": "This room is suggested as a good one to join",
     "Suggested": "Suggested",
     "Select a room below first": "Select a room below first",
