--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2986,7 +2986,7 @@
     "Please enter the code it contains:": "Please enter the code it contains:",
     "Code": "Code",
     "Submit": "Submit",
-    "Enter a registration token.": "Enter a registration token.",
+    "Enter a registration token provided by the homeserver administrator.": "Enter a registration token provided by the homeserver administrator.",
     "Registration token": "Registration token",
     "Something went wrong in confirming your identity. Cancel and try again.": "Something went wrong in confirming your identity. Cancel and try again.",
     "Start authentication": "Start authentication",
