--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2922,7 +2922,7 @@
     "Show preview": "Show preview",
     "Source URL": "Source URL",
     "Collapse reply thread": "Collapse reply thread",
-    "Jump to relation": "Jump to relation",
+    "View related event": "View related event",
     "Report": "Report",
     "Copy link": "Copy link",
     "Forget": "Forget",
