--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1527,7 +1527,7 @@
     "Manage your signed-in devices below. A device's name is visible to people you communicate with.": "Manage your signed-in devices below. A device's name is visible to people you communicate with.",
     "Privacy": "Privacy",
     "Presence": "Presence",
-    "You server doesn't support disabling read receipts": "You server doesn't support disabling read receipts",
+    "Your server doesn't support disabling read receipts": "Your server doesn't support disabling read receipts",
     "Sidebar": "Sidebar",
     "Spaces to show": "Spaces to show",
     "Spaces are ways to group rooms and people. Alongside the spaces you're in, you can use some pre-built ones too.": "Spaces are ways to group rooms and people. Alongside the spaces you're in, you can use some pre-built ones too.",
