--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1500,7 +1500,7 @@
     "Warn before quitting": "Warn before quitting",
     "Always show the window menu bar": "Always show the window menu bar",
     "Show tray icon and minimise window to it on close": "Show tray icon and minimise window to it on close",
-    "Disable hardware acceleration (requires restart to take effect)": "Disable hardware acceleration (requires restart to take effect)",
+    "Enable hardware acceleration (requires restart to take effect)": "Enable hardware acceleration (requires restart to take effect)",
     "Preferences": "Preferences",
     "Room list": "Room list",
     "Keyboard shortcuts": "Keyboard shortcuts",
