More robust to failurse and user feedback

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -3091,11 +3091,15 @@
     "Delete all": "Delete all",
     "Retry all": "Retry all",
     "You can select all or individual messages to retry or delete": "You can select all or individual messages to retry or delete",
-    "Connectivity to the server has been lost.": "Connectivity to the server has been lost.",
-    "Sent messages will be stored until your connection has returned.": "Sent messages will be stored until your connection has returned.",
+    "Refresh timeline": "Refresh timeline",
+    "Refreshing": "Refreshing",
+    "A network error occurred while trying to refresh the timeline. Your homeserver might be down or was just a temporary problem with your internet connection.": "A network error occurred while trying to refresh the timeline. Your homeserver might be down or was just a temporary problem with your internet connection.",
+    "An error occurred while trying to refresh the timeline.": "An error occurred while trying to refresh the timeline.",
+    "Please submit <debugLogsLink>debug logs</debugLogsLink> to help us track down the problem.": "Please submit <debugLogsLink>debug logs</debugLogsLink> to help us track down the problem.",
     "History import detected.": "History import detected.",
     "History was just imported somewhere in the room. In order to see the historical messages, refresh your timeline.": "History was just imported somewhere in the room. In order to see the historical messages, refresh your timeline.",
-    "Refresh timeline": "Refresh timeline",
+    "Connectivity to the server has been lost.": "Connectivity to the server has been lost.",
+    "Sent messages will be stored until your connection has returned.": "Sent messages will be stored until your connection has returned.",
     "You seem to be uploading files, are you sure you want to quit?": "You seem to be uploading files, are you sure you want to quit?",
     "You seem to be in a call, are you sure you want to quit?": "You seem to be in a call, are you sure you want to quit?",
     "Search failed": "Search failed",
